2003-07-02  Theodore A. Roth  <troth@openavr.org>
[Contributed by Jake McGuire <jake@boom.net>]

	* src/jtagio.cc: Add support for mega64.

2003-07-02  Theodore A. Roth  <troth@openavr.org>
[Contributed by Joerg Wunsch <joerg_wunsch@uriah.heep.sax.de>]

	* configure.ac: Bump version.
	* src/jtagprog.cc: SEC_ARCH_BIT_0 and SEC_THREAD_LOCAL are not
	available on some older bfd libraries.
	* src/main.cc: BSD always requires the inclusion of <sys/types.h>
	before <sys/socket.h>.
	(initSocketAddress): struct sockaddr_in in 4.4BSD contains some padding
	at the end in a struct field named sin_zero which needs zero'ed out.

2003-06-13  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/jtagio.cc: Set JTAG_P_CLOCK param to 0xff instead of 0xfd to
	speed things up a little bit.
	* src/remote.cc: Remove a debug output statement.

2003-06-12  Theodore A. Roth  <troth@openavr.org>

	* doc/todo.txt: Remove some items that have been fixed or are now
	working.

2003-06-12  Theodore A. Roth  <troth@openavr.org>

	* src/jtagrw.cc (jtagWrite): Print debug message if addr or length is
	odd.
	* src/remote.cc (reportStatusExtended): New function for replying with
	a 'T' packet instead of an 'S' packet.
	Use new function whenever a breakpoint is hit from a step or continue
	command from gdb.

2003-06-12  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/remote.cc: Remove call to interruptProgram() when handling a 'g'
	packet. This was accidently committed and should not have been since
	it causes the jtagice box to corrupt the program counter. Not good.

2003-06-11  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Bump version.
	* src/jtagio.cc: Remove check failure for jtag ice HW version.
	* src/remote.cc: Fix handling the 'M' command from GDB to allow for
	odd addresses and lengths.

2003-06-05  Theodore A. Roth  <troth@openavr.org>

	* configure.ac: Check for intl library since linking to bfd may