@@ -1,3 +1,11 @@
+2003-07-10  Theodore A. Roth  <troth@openavr.org>
+[Contributed by Joerg Wunsch <joerg_wunsch@uriah.heep.sax.de>]
+
+	* configure.ac: Bump version.
+	* src/avarice.h: Define DEFAULT_PORT.
+	* src/main.cc: Have host default to listening on any interface and 
+	port default to DEFAULT_PORT (4242).
+
 2003-07-02  Theodore A. Roth  <troth@openavr.org>
 [Contributed by Jake McGuire <jake@boom.net>]
 
